# djdrf

./: .env.sample  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt  users_list.json
config/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner.py  0003_lesson_owner.py  0004_alter_course_options_alter_lesson_options.py  0005_subscription.py  0006_course_link.py  0007_course_last_update.py
users/: models.py  permissions.py  services.py  tasks.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_payment_link_payment_session_id.py  0005_alter_user_last_login.py
